# Training-on-Classes-and-Docker

021_notebook_to_python_file/: analysis.py
022_basic_1_file_class/: analysis.py
023_private_functions/: analysis.py
024_splitting_into_files/app/: decision_tree.py  preprocess.py
025_inheritance/app/: decision_tree.py  logistic_reg.py
no_flask/03_Python_App_and_Poetry/: README.md  pyproject.toml
no_flask/04_Containerised_App/: Dockerfile  README.md  analysis.py  pyproject.toml  requirements.txt
no_flask/04_Containerised_App/app/modelling/: generic_model.py
