[tool.poetry]
name = "04-containerised-app"
version = "0.1.0"
description = ""
authors = ["Jonny Sheldon, Matt Stammers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
altair = "^5.3.0"
scikit-learn = "^1.5.0"
vl-convert-python = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
